# frcl

./: .gitignore  CHANGES  CMakeLists.txt  LICENSE  README.md  index.js  jsdoc.json  package-lock.json  package.json.in  vite.config.js
component/: edit-dialog.js  index.js  login-dialog.js
component/parts/: data-table.js  filter-input.js  label-dropdown.js  label-input.js  pagination.js
component/parts/fragment/: dropdown.js  footer.js  input.js  label-input.js
core/: fr.js  hrequest.js  misc.js  notificator.js  reactive.js
examples/: app.css
examples/sc1/: index.html  main.js
examples/sc2/: main.js
examples/sc3/: index.html  main.js
examples/showcase/: index.html  main.js
lib/: crypto.js  index.js  kv-storage.js  session-storage.js  util.js
lib/component/: index.js  login-dialog.js
lib/component/parts/: dialog.js  login-dialog.js  modal.js  table.js
lib/component/parts/fragment/: footer.js  header.js  icon-font.js  icon_font.js  label-input.js
lib/component/view-model/: column-configuration.js
lib/core/: element.js  emit.js  fr.js  global.js  misc.js  notificator.js  reactive.js  serial_id.js
lib/examples/sc1/: main.js
lib/examples/sc2/: index.html  main.js
lib/examples/showcase/: index.html  main.js
lib/examples/small1/: index.html  main.js
lib/examples/small2/: index.html  main.js
lib/tests/: element-add.test.js  element-attribute.test.js  element-tag.test.js  element.test.js  reactive.test.js  serial_id.test.js
lib/view-model/: index.js
scripts/: install-node.sh
styles/: frcl.scss
styles/css/: fr.css  reset.css
styles/sass/base/: _index.scss  basic.scss  dialog.scss  input.scss  reset.scss  table.scss  toast.scss
styles/sass/global/: mixins.scss  vars.scss
styles/sass/layout/: _index.scss  contents.scss  page.scss
tests/: element.test.js  hrequest.test.js  nel.test.js  notificator.test.js  reactive.test.js  serial_id.test.js
